# phone-lookup-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
.claude/agents/: README.md  documentation-agent.md  fullstack-dev-agent.md  git-commit-agent.md  rust-dev-agent.md  rust-test-agent.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BatchQuery.tsx  Footer.tsx  Header.tsx  SingleQuery.tsx  TabNavigation.tsx  index.ts
frontend/src/hooks/: usePhoneQuery.ts
frontend/src/lib/: tauri.ts
src/: config.rs  lib.rs  main.rs  tauri_commands.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: batch_query_test.rs  demo_test.rs
