[package]
name = "phone-lookup-tauri"
version = "1.0.0"
description = "手机号归属地查询桌面工具"
authors = ["Wangnov <wangnov69@gmail.com>"]
license = "MIT"
repository = "https://github.com/wangnov/phone-lookup-rs"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "phone_lookup_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = ["macos-private-api"] }
tauri-plugin-log = "2"
# 引用现有的核心库，启用tauri-app特性
phone-lookup-rs = { path = "..", features = ["tauri-app"] }
tokio = { version = "1.46.1", features = ["full"] }
